<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">

    <include layout="@layout/toolbar"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_button_home">

            <Button
                android:id="@+id/btn_new_patient"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="?selectableItemBackground"
                android:text="@string/new_patient"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="22sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/gradient_button_home">

            <Button
                android:id="@+id/btn_history"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="?selectableItemBackground"
                android:text="@string/history"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="22sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/gradient_button_yellow">

            <Button
                android:id="@+id/btn_draft"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="?selectableItemBackground"
                android:text="@string/view_drafts"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="22sp" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>