<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="30dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_button_home">

            <Button
                android:id="@+id/btn_submit_plan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:padding="30dp"
                android:text="@string/submit_plan"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="22sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/gradient_button_home">

            <Button
                android:id="@+id/btn_my_camps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:padding="30dp"
                android:text="@string/my_camps"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="22sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/gradient_button_home">

            <Button
                android:id="@+id/btn_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:padding="30dp"
                android:text="@string/history"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="22sp" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>